fixes. still need to fix the case where 2 nodes share the same exact location (stack overflow)

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ table {
 
 /***********Everything above is RESET**************/
 body, html {width:100%; height:100%;}
-#canvas {width:1000px; height:1000px; border:1px solid black;}
+#canvas {width:1000px; height:500px; border:1px solid black;}
 #canvas:active{cursor:default;}
 #container{width:1000px; margin: 0 auto;}
 #controltable{width:100%; text-align:center;}
